<resources>
    <string name="app_name">TodoList</string>

    <string name="action_settings">设置</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_title_main_1">待办事项</string>
    <string name="tab_title_main_2">锤子时钟</string>
    <string name="tab_title_main_3">屏幕使用时间统计</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>


    <!-- button -->
    <string name="btn_start">开始</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_resume">继续</string>
    <string name="btn_stop">放弃</string>
    <string name="btn_skip">略过</string>

    <string name="scene_title_work">开始工作</string>
    <string name="scene_title_break">开始休息</string>

    <string name="scene_work">工作</string>
    <string name="scene_short_break">短时休息</string>
    <string name="scene_long_break">长时休息</string>

    <string name="amount_durations">番茄总时间 %1$d 分钟</string>
    <string name="stage_time_unit">%1$d 分钟</string>
    <string name="time_unit">分钟</string>

    <!-- 通知 -->
    <string name="notification_focus">番茄工作中</string>
    <string name="notification_focus_pause">番茄暂停中</string>
    <string name="notification_break">正在休息</string>
    <string name="notification_break_pause">休息暂停中</string>
    <string name="notification_time_left">还剩</string>
    <string name="notification_finish">放下工作，准备休息</string>
    <string name="notification_finish_content">已经完成一个番茄钟，休息一下吧！</string>
    <string name="notification_break_finish">休息结束</string>
    <string name="notification_break_finish_content">休息结束，开启下一个番茄钟吧！</string>

    <string name="toast_tick_sound_on">白噪音已开启</string>
    <string name="toast_tick_sound_off">白噪音已关闭</string>

    <!-- 设置 -->
    <string name="pref_title_tick_title">定时器设置</string>
    <string name="pref_title_work_length">番茄钟时长</string>
    <string name="pref_title_short_break">休息时长</string>
    <string name="pref_title_long_break">长休息时长</string>
    <string name="pref_title_long_break_frequency">长休息间隔</string>
    <string name="pref_title_frequency_value">%1$d 个番茄</string>
    <string name="pref_title_time_value">%1$d 分钟</string>

    <string name="focus_explain">说明：开启专注模式需要开启“获取应用情况”权限，打开此开关并开始番茄计时，除本App之外的所有非系统App将会被拦截</string>

    <string name="appbar_circleimageview_behavior">com.example.todolist.CircleImageInUsercBehavior</string>
    <string name="appbar_overscroll_behavior">com.example.todolist.AppBarLayoutOverScrollViewBehavior</string>

    <string name="schedule_today_title">今日数据</string>
    <string name="schedule_amount_title">累计数据</string>
    <string name="schedule_durations">番茄时间</string>
    <string name="schedule_times">番茄次数</string>
    <string name="schedule_done">完成次数</string>
    <string name="schedule_amount_summary">注意：卸载应用，累计数据将重新计算!</string>

</resources>