<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_pressed"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_margin"
            app:cardElevation="@dimen/card_elevation"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:baselineAligned="false"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider"
                android:showDividers="middle"
                android:layout_margin="@dimen/card_view_spacing">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="@dimen/header_spacing"
                    android:text="@string/schedule_today_title"/>

                <LinearLayout
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/card_view_spacing"
                    android:paddingBottom="@dimen/card_view_spacing">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|bottom">
                            <TextView
                                android:id="@+id/schedule_today_durations"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="24sp"
                                android:text="0"
                                android:textStyle="bold"
                                android:textColor="@color/colorTextDark"
                                android:gravity="center"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:textColor="#000000"
                                android:text="@string/time_unit"
                                android:gravity="center"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/schedule_durations"
                            android:textColor="#000000"
                            android:gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/schedule_today_times"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:text="0"
                            android:textStyle="bold"
                            android:textColor="@color/colorTextDark"
                            android:gravity="center"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/schedule_times"
                            android:textColor="#000000"
                            android:gravity="center"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_margin"
            app:cardElevation="@dimen/card_elevation"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider"
                android:showDividers="middle"
                android:layout_margin="@dimen/card_view_spacing">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="@dimen/header_spacing"
                    android:text="@string/schedule_amount_title"/>

                <LinearLayout
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/card_view_spacing"
                    android:paddingBottom="@dimen/card_view_spacing">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|bottom">
                            <TextView
                                android:id="@+id/schedule_amount_durations"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="24sp"
                                android:text="0"
                                android:textStyle="bold"
                                android:textColor="@color/colorTextDark"
                                android:gravity="center"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:textColor="#000000"
                                android:text="@string/time_unit"
                                android:gravity="center"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/schedule_durations"
                            android:textColor="#000000"
                            android:gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/schedule_amount_times"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:text="0"
                            android:textStyle="bold"
                            android:textColor="@color/colorTextDark"
                            android:gravity="center"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/schedule_times"
                            android:textColor="#000000"
                            android:gravity="center"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
